unpackaged/main/default/objects/Account/fields/custom_check_box__c.field-meta.xml
<CustomField>
    <fullName>custom_check_box__c</fullName>
    <defaultValue>false</defaultValue>
    <label>custom check box</label>
    <type>Checkbox</type>
</CustomField>