unpackaged/main/default/objects/Account/fields/gearset_field__c.field-meta.xml
<CustomField>
    <fullName>gearset_field__c</fullName>
    <label>gearset field</label>
    <length>52</length>
    <type>Text</type>
</CustomField>